(tests
 (names
  test_signature
  test_path_pattern
  test_ws
  test_http_client
  test_http_server)
 (libraries
  alcotest
  base64
  cohttp
  cstruct
  eio
  eio.core
  eio.unix
  eio_main
  fmt
  logs
  logs.fmt
  mirage-crypto-rng
  mirage-crypto-rng.unix
  ptime
  ptime.clock
  ptime.clock.os
  websocket
  x509
  yume
  yojson))
